--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body id="container">
-        <div class="item">Block 1</div>
-        <div class="item">Block 2</div>
-        <div class="item">Block 3</div>
+        <iframe class="item" src=""></iframe>
     </body>
 </html>
