First functionality for the Flexboard object

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <title>Dashboard</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <script src="controller.js"></script>
     </head>
-    <body id="container">
-        <iframe class="item" src=""></iframe>
-    </body>
+    <body id="container"></body>
 </html>
