Renamed JS and CSS files

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Dashboard</title>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css">
-        <script src="controller.js"></script>
+        <link href="flexboard.css" rel="stylesheet" type="text/css">
+        <script src="flexboard.js"></script>
     </head>
     <body id="container"></body>
 </html>
