Simplified CSS rules

--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
         <link href="flexboard.css" rel="stylesheet" type="text/css">
         <script src="flexboard.js"></script>
     </head>
-    <body id="container"></body>
+    <body class="container"></body>
 </html>
