--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dashboard</title>
+        <meta charset="utf-8">
+        <title>Flexboard</title>
         <link href="flexboard.css" rel="stylesheet" type="text/css">
         <script src="flexboard.js"></script>
     </head>
